<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H-sektionen</string>
    <string name="action_settings">Settings</string>

    <string-array name="menu_titles">
        <item>Nyheter</item>
        <item>Events</item>
        <item>Dagens Lunch</item>
        <item>11:an</item>
        <item>Information</item>
        <item>Förslagslådan</item>
        <item>Felanmälan</item>
        <item>Om appen</item>
    </string-array>

    <string name="action_side_menu"></string>
    <string name="loading">Laddar...</string>
    <string name="title_activity_lunch">Lunch</string>
    <string name="app_id">161725214029162</string>
    <string name="hello_world">Hello world!</string>
    <string name="Background">bg</string>
    <string name="links_header">Länkar</string>
    <string name="opening_hours_header">Öppettider</string>
    <string name="no_info">Ingen information tillgänglig</string>
    <string name="board_members_header">Styret</string>
    <string name="title_activity_lunch">Dagens Lunch</string>
    <string name="title_activity_info">Information</string>
    <string name="title_activity_pub">Pub</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_suggest">Förslagslådan</string>
    <string name="title_activity_faultreport">Felanmälan</string>
    <string name="noEmailClientFound">"Det verkar inte finnas någon E-mail applikation på din telefon."</string>	
    
    <string name="GET_FEED_ERROR_MSG">Det gick inte att hämta flödet.</string>
    <string name="INTERNET_CONNECTION_ERROR_MSG">Ingen internetanslutning.</string>
    <string name="INFO_ERROR">Kunde inte hämta information.</string>
    
    <string name="suggest_header_textView">Förslagslådan</string>
    <string name="suggest_text">Här kan du skicka in förslag till H-sektionen. Har du en kul idèe? Är det något du är missnöjd med eller saknar? Låt oss veta!</string>
    <string name="suggest_edit_message">Skriv här</string>
    <string name="suggest_button_send">Skicka</string>
	<string name="suggest_emailReceiver">foerslagsladan.918a17d9@internverksamhet.h-styret.podio.com</string>
	<string name="suggest_subject">Förslag till H-sektionen</string>
		
    <string name="faultreport_buildingEmail">8800@chalmers.se</string>
    <string name="faultreport_dataEmail">support@chalmers.se</string>
    <string name="faultreport_noEmailClientFound">Det verkar inte finnas någon E-mail applikation på din telefon.</string>
    <string name="faultreport_subject">Felanmälan</string>
    <string name="faultreport_header_textView">Felanmälan</string>
    <string name="faultreport_text">Hittat något fel i lokalerna? Startar inte datorn? Tänds inte lampan? Hänger det istappar i grupprummet? Gör en felanmälan!</string>
    <string name="faultreport_edit_message">Skriv här</string>
    <string name="faultreport_button_send">Skicka</string>
    <string name="faultreport_infoHeaderText">Vad kan du anmäla och var? Se nedan!</string>
    <string name="faultreport_checkbox_text">Datorproblem? Kryssa i rutan så skickas det till data-enheten.</string>
    <string name="faultreport_guardHeaderText">Väktare:</string>
    <string name="faultreport_guardText">Vid behov av kontakt med väktare kan man ringa 772 44 99, vid svar begär att bli kopplad till "Chalmersväktaren". Väktarna nås endast utanför ordinarie arbetstider.</string>
	<string name="faultreport_emergencyHeaderText">Akuta fastighetsfel:</string>
	<string name="faultreport_emergencyText">Vid akuta fastighetsfel finns det möjlighet att kontakta fastighetsägarens beredskapssökare på 0746 36 62 98, aternativt SOS Alarmering 703 17 25.</string>
	<string name="faultreport_computerHeaderText">Datorfel:</string>
    <string name="faultreport_computerText">Fel på datorerna anmäls till support@chalmers.se. Beskriv vad som är fel och ange vilken dator det gäller. Om dator ej kan anges, v.v. uppge rumsnummer och vilket hus(!) det gäller. Du kan även anmäla via fältet ovan, glöm inte att kryssa i rutan för dataproblem.</string>
	<string name="faultreport_lightingHeaderText">Belysning och ljuskällor:</string>
    <string name="faultreport_lightingText">Underhåll av belysning utförs varje sommar av serviceavdelningen. Fel på belysningen under läsperioden i salar, grupprum och föreningslokaler anmäls till Serviceavdelningen tel 031 772 88 00 e-post  8800@chalmers.se eller i fältet ovan.</string>
    <string name="faultreport_furnitureHeaderText">Möbler och utrustning:</string>
    <string name="faultreport_furnitureText">Felanmälan till Serviceavdelningen tel 031 772 88 00 e-post  8800@chalmers.se eller i fältet ovan.</string>
	<string name="faultreport_appProblemHeaderText">Fel eller buggar i appen:</string>
	<string name="faultreport_appProblemText">Skicka gärna alla detaljer om buggar i H-sektionsappen via förslagslådan.</string>
	
	<string name="about_versionHeaderText">Version</string>
	<string name="about_versionText">1.0</string>
	<string name="about_creatorsHeader">Utvecklare</string>
	<string name="about_creators">Jonas Berglund\nRobin Törnquist\nOlle Svensson\nRikard Ekbom\nOskar Gustavsson\nAnders Johansson</string>
	<string name="about_trailerHeaderText">Skapandet av H-sektionsappen</string>
	<string name="about_trailerText">Action, spänning, skräck och drama. H-sektionens trailer har allt!</string>
	<string name="about_trailerButtonText">Se filmen</string>
	<string name="video">http://www.youtube.com/watch?v=eE8PISJ_0jY</string>
	
    <color name="pinkish">#C43D82</color>
    <color name="white">#FFFFFF</color>
    
</resources>
