<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

	<LinearLayout 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:orientation="vertical" >
    	
	       <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/faultreport" 
        android:contentDescription="@string/Background"/>
		
	    
    	<TextView
        	android:id="@+id/faultreport_textView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:text="@string/faultreport_text"
        	android:textSize="15sp"
        	android:layout_gravity="center_horizontal" />
    
    	
    	<TextView
    	    android:id="@+id/faultreport_infoHeaderTextView"
    	    android:layout_gravity="center_horizontal"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:textSize="15sp"
        	android:text="@string/faultreport_infoHeaderText" />
	        		
    	<TextView
        	android:id="@+id/faultreport_guardHeaderTextView"
        	android:background="@color/pinkish"
        	android:textColor="@color/white"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:paddingLeft="5dp"
    		android:paddingRight="5dp"
        	android:textSize="15sp"
        	android:text="@string/faultreport_guardHeaderText" />
    	
    	<TextView 
    	    android:id="@+id/about_videoTextView"
    	    android:layout_width="wrap_content"
   		 	android:layout_height="wrap_content" 
   		 	android:text="@string/video"
   		 	android:autoLink="web"
    		android:linksClickable="true"></TextView>
    	
    	<TextView
    	    android:id="@+id/faultreport_guardTextView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:textSize="12sp"
        	android:text="@string/faultreport_guardText" />
    	
        		
	</LinearLayout>
</ScrollView>
