<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/opening_hours_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opening_hours_header"
        android:textSize="@dimen/h2" />
    
    <TextView
        android:id="@+id/opening_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_info" />
    
    <TextView
        android:id="@+id/links_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/links_header"
        android:textSize="@dimen/h2" />

    <TextView
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/board_members_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board_members_header"
        android:textSize="@dimen/h2" />
    
</LinearLayout>
