<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

	<LinearLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:orientation="vertical" >
		
		   <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/suggest" 
        android:contentDescription="@string/Background"/>
	    
    	<TextView
        	android:id="@+id/suggest_textView"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:text="@string/suggest_text"
        	android:textSize="15sp" />
    
    	<EditText
    	    android:id="@+id/suggest_edit_message"
    	    android:layout_width="fill_parent"
    	    android:layout_height="match_parent"
    	    android:layout_marginLeft="5dp"
    	    android:layout_marginRight="5dp"
    	    android:layout_marginTop="5dp"
    	    android:minLines="4"
    	    android:hint="@string/suggest_edit_message"
    	    />

    	<Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="5dp"
        	android:layout_gravity="center_horizontal"
        	android:text="@string/suggest_button_send"
        	android:onClick="sendSuggestEmail" />

    	<Button
    	    android:background="@android:color/transparent"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="bottom|right"
        	android:text="@string/suggest_button_secret"
        	android:onClick="startSecret" />
	</LinearLayout>
</ScrollView>
